--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <meta name="description" content="Escape the Ordinary - AI 기반 맞춤형 여행 추천 서비스. 여행 성향 분석, 실시간 날씨, 맞춤형 여행 코스 추천">
   <meta name="keywords" content="여행, 추천, AI, 관광지, 여행앱, Escape the Ordinary, Travel More, 여행 성향 분석, GPT 추천">
   
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.json">
+  <!-- PWA Manifest - Temporarily disabled -->
+  <!-- <link rel="manifest" href="/manifest.json"> -->
   
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
