--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,17 @@
   
   <title>Escape the Ordinary - 여행 추천 앱</title>
   
+  <!-- Force inline basic styles for immediate rendering -->
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { margin: 0; padding: 0; overflow-x: hidden; }
+    body { 
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+      background: linear-gradient(180deg, #f0f4fc 0%, #e8eef8 100%);
+    }
+    #root { min-height: 100vh; width: 100%; }
+  </style>
+  
   <!-- Kakao Maps SDK will be loaded dynamically by React -->
   <script>
     console.log('[Kakao] 📍 Domain:', window.location.origin);
